--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ html {
     width: 100vw;
     height: 100vh;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 * {
@@ -89,14 +91,44 @@ button:hover {
     background-color: white;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 972px) {
+    body {
+        width: 100vw;
+        height: 100vh;
+        overflow-x: hidden;
+        overflow-y: hidden;
+
+    }
+
     #main-rectangle {
+        width: 70%;
+        height: 90%;
         flex-direction: column;
         min-height: auto;
     }
 
+    #inner-rect1 {
+        height: 50%;
+        width: 100%;
+
+
+    }
+
     #inner-rect2 {
-        padding: 24px;
+        height: 50%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0
+    }
+
+    #inner-rect1 img {
+        object-fit: cover;
+        object-position: center;
+        display: block;
+        width: 100%;
     }
 
     #heading {
